2007-11-30  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Don't compute data or axis limits.
	(get_data_limits, get_axis_limits): Delete.

2007-11-29  David Bateman  <dbateman@free.fr>

	* plot/pareto.m: New file.
	* plot/Makefile.in (SOURCES): Add it to the sources.
	* plot/__go_draw_axes__.m (do_tics1): Replace "%" with "%%" in tic
	marks to avoid gnuplot error about formating. More colorspec to
	after the tics.
	* plot/plotyy.m: More generic check for appropriate axis color.

	* plot/__stem__.m: New file based on old stem.m expanded to treat
	2- and 3-D.
	* plot/stem3.m: New function.
	* plot/Makefile.in (SOURCES): Add them to the sources.
	* plot/stem.m: Adapt to use __stem__.

2007-11-29  John W. Eaton  <jwe@octave.org>

	* plot/contour.m, plot/contour3.m, plot/fill.m, plot/patch.m,
	plot/surf.m, plot/surface.m: Don't return handle value unless
	requested.

	* plot/patch.m: Omit isnan check on handle returned from
	__plt_get_axis_arg__.

	* plot/__plt_get_axis_arg__.m: Don't fail if current figure exists
	but has no axes.

2007-11-28  David Bateman  <dbateman@free.fr>

	* __plt_get_axis_handle__.m: Also allow hggroup and return axes
	ancestor. If leading argument is logical set variable nogca to see
	if gca() should be called if there is no active handle found.
	* __bar__.m, caxis.m, scatter.m, contourf.m, __axes_limits__.m,
	fill.m,  surf.m, meshz.m, axis.m, pie.m, contour.m,
	quiver.m, area.m, grid.m, cylinder.m, contour3.m, surface.m,
	patch.m, scatter3.m, plot.m, sphere.m, quiver3.m, plotyy.m,
	xlabel.m, ylabel.m, surfnorm.m, zlabel.m: Adapt to use
	__plt__get_axis_arg__ to find axis handle.
	* polar.m: Typo.

2007-11-28  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m (get_data_limits): Delete unused arg TX.

2007-11-28  Michael Goffioul <michael.goffioul@gmail.com>

	* plot/drawnow.m: Fix typo.

2007-11-27  David Bateman  <dbateman@free.fr>

	* plot/errorbar.m, plot/loglog.m, plot/loglogerr.m, plot/polar.m,