@@ -1411,9 +1411,9 @@ function do_tics_1 (ticmode, tics, labelmode, labels, color, ax, plot_stream, mi
 	else
 	  fprintf (plot_stream, "set %stics nomirror (", ax);
 	endif
+	labels = regexprep(labels, "%", "%%");
 	for i = 1:ntics
-	  fprintf (plot_stream, " \"%s\" %g", 
-		   regexprep (labels(k++), "%", "%%"), tics(i))
+	  fprintf (plot_stream, " \"%s\" %g", labels{k++}, tics(i))
 	  if (i < ntics)
 	    fputs (plot_stream, ", ");
 	  endif
